--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wechat-oauth",
   "version": "1.2.5",
   "description": "wechat OAuth/Oauth Componant",
+  "main": "index.js",
   "scripts": {
     "test": "make test-all"
   },
@@ -31,6 +32,5 @@
   "readmeFilename": "README.md",
   "directories": {
     "test": "test"
-  },
-  "files": ["lib"]
+  }
 }
